[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/ThemePreview.tscn" type="PackedScene" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -24.0
margin_bottom = 24.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 1024.0
margin_bottom = 96.0

[node name="PlayButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0
text = "Play"

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 44.0
text = "Quit"

[node name="ThemePreview" parent="Panel/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 96.0

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
